--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -28,3 +28,27 @@ body {
   width: 20%;
   margin: 5px;
 }
+
+.modal {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  background-color: red;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(0,0,0, 0.4);
+  z-index: 1;
+}
+
+.inner-box {
+  height: 400px;
+  width: 400px;
+  background-color: rgba(255,255,255, 1);
+  color: black;
+  border-radius: 10px;
+  z-index: 2;
+}
