--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,15 +1,17 @@
+@import url('https://fonts.googleapis.com/css?family=Amiri');
 
 body {
-  background-color: #ecf0f1;
+  background-color: #FFFCE6;
   padding: 0px;
   margin: 0px;
   overflow: hidden;
+  font-family: 'Amiri', serif;
 }
 
 .main-container {
   height: 90vh;
   width: 100%;
-  background-color: #27ae60;
+  background-color: #FFFCE6;
   padding: 20px;
   border-radius: 5px;
   overflow: scroll;
@@ -24,9 +26,19 @@ body {
 }
 
 .book {
-  border: 2px solid black;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   width: 20%;
   margin: 5px;
+}
+
+.book h5 {
+  text-align: center;
+  padding-left: 5px;
+  padding-right: 5px;
 }
 
 .modal {
@@ -54,9 +66,9 @@ body {
 }
 
 .navigation {
-  background-color: #34495e;
+  background-color: #7D1424;
   width: 100%;
-  height: 100%;
+  box-sizing: border-box;
 }
 
 .nav-bar {
@@ -71,8 +83,7 @@ body {
 .nav-item {
   display: inline-block;
   padding: 10px 5px;
-  background-color: #d35400;
-  height: 100%;
+  background-color: #F24D16;
   border: 0.5px solid #bdc3c7;
 }
 
@@ -107,7 +118,7 @@ body {
 											  transparent)
 }
 
-
-.app-wrapper {
-  padding: 10px 50px;
+.active {
+  background-color: #FFFCE6;
+  border-bottom: none;
 }
