--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=Amiri');
-
+@import url('https://fonts.googleapis.com/css?family=Cabin|Ubuntu');
+@import url('https://fonts.googleapis.com/css?family=Lora:400,700|Open+Sans');
 body {
   background-color: #FFFCE6;
   padding: 0px;
   margin: 0px;
-  overflow: hidden;
   font-family: 'Amiri', serif;
 }
 
@@ -14,7 +14,6 @@ body {
   background-color: #FFFCE6;
   padding: 20px;
   border-radius: 5px;
-  overflow: scroll;
 }
 
 .book-container {
@@ -41,29 +40,6 @@ body {
   padding-right: 5px;
 }
 
-.modal {
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  width: 100%;
-  height: 100%;
-  background-color: red;
-  border-radius: 5px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: rgba(0,0,0, 0.4);
-  z-index: 1;
-}
-
-.inner-box {
-  height: 400px;
-  width: 400px;
-  background-color: rgba(255,255,255, 1);
-  color: black;
-  border-radius: 10px;
-  z-index: 2;
-}
 
 .navigation {
   background-color: #7D1424;
@@ -121,4 +97,219 @@ body {
 .active {
   background-color: #FFFCE6;
   border-bottom: none;
+}
+
+.modal {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  background-color: red;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(0,0,0, 0.4);
+  z-index: 1;
+}
+/* MODAL STYLING */
+
+.inner-box {
+  display: flex;
+  flex-direction: column;
+  padding: 0px;
+  margin: 0px;
+  height: 400px;
+  width: 400px;
+  background-color: rgba(255,255,255, 1);
+  color: black;
+  border-radius: 10px;
+  z-index: 2;
+  box-sizing: border-box;
+}
+
+.inner-box h4 {
+  overflow-wrap: normal;
+  width: 70%;
+  text-align: center;
+  margin-bottom: 0px;
+}
+
+.inner-box h5 {
+  margin-bottom: 0px;
+  margin-top: 0px;
+}
+
+.inner-box img {
+  width: 100px;
+  height: 150px;
+}
+
+.inner-box a {
+  margin-bottom: 15px;
+}
+
+.modal-top {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 25px;
+}
+
+.modal-bot {
+  box-sizing: border-box;
+  border-radius: 5px;
+}
+
+.list-container {
+  padding: 0px;
+  margin: 0px;
+}
+.modal-signin {
+  list-style: none;
+  font-family: 'Ubuntu', sans-serif;
+}
+
+.modal-signin a {
+  display: inline-block;
+  width: 100%;
+  text-align: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  color: #ecf0f1;
+}
+
+#button-one {
+  height: 100%;
+  background-color: #D64541;
+  margin: 0px;
+}
+
+#button-two {
+  height: 100%;
+  background-color: #9A12B3;
+  margin: 0px;
+}
+
+.owner-block {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+  border: 1px solid black;
+}
+
+.image-block {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid red;
+}
+
+.owner-block a {
+  margin: 0px 10px;
+}
+
+.modal-block-container {
+  display: flex;
+  flex-direction: row;
+    margin-top: 20px;
+}
+
+.about-container {
+  border-radius: 2px;
+  background-color: white;
+  width: 70%;
+  height: 70%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 100px;
+  padding: 20px;
+  padding-bottom: 40px;
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+  font-family: 'Open Sans', sans-serif;
+}
+
+.about-container h1 {
+  text-align: center;
+  font-family: 'Lora', serif;
+/*  text-decoration: underline; */
+}
+
+.about-container li {
+  padding-top: 10px;
+  list-style: initial;
+}
+
+.about-container small {
+  float: right;
+}
+
+/* FORM */
+
+.form-container {
+  background-color: white;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  height: 50%;
+  margin-top: 100px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-left: 50px;
+  padding-bottom: 50px;
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+}
+
+.form-group label, input {
+  display: block;
+}
+
+.form-group label {
+  font-weight: 600;
+}
+
+.form-group input {
+  width: 75%;
+  border: none;
+  border-bottom: 2px solid #bdc3c7;
+  margin-bottom: 10px;
+}
+
+input:focus {
+  outline: none;
+  border-bottom: 2px solid #7D1424;
+  transition: 1s;
+}
+
+input[type="submit"] {
+  padding: 10px 25px;
+  background-color: #7D1424;
+  border: none;
+  color: white;
+  margin-top: 15px;
+}
+
+#button-three {
+  height: 100%;
+  background-color: #9A12B3;
+  margin: 0px;
+}
+
+#button-four {
+  height: 100%;
+  background-color: #9A12B3;
+  margin: 0px;
+}
+
+#button-five {
+  height: 100%;
+  background-color: #9A12B3;
+  margin: 0px;
 }
