--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,21 +1,27 @@
 @import url('https://fonts.googleapis.com/css?family=Amiri');
 @import url('https://fonts.googleapis.com/css?family=Cabin|Ubuntu');
 @import url('https://fonts.googleapis.com/css?family=Lora:400,700|Open+Sans');
+
 body {
   background-color: #FFFCE6;
   padding: 0px;
   margin: 0px;
   font-family: 'Amiri', serif;
+  overflow: hidden;
 }
 
 .main-container {
-  height: 90vh;
   width: 100%;
   background-color: #FFFCE6;
   padding: 20px;
   border-radius: 5px;
 }
 
+.app-wrapper {
+  overflow:scroll;
+  overflow-x: hidden;
+  height: 100%;
+}
 .book-container {
   display: flex;
   flex-direction: row;
@@ -30,8 +36,8 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 20%;
-  margin: 5px;
+  width: 24%;
+  margin: 2px;
 }
 
 .book h5 {
@@ -40,6 +46,10 @@ body {
   padding-right: 5px;
 }
 
+.book img {
+  max-width: 100%;
+  height: auto;
+}
 
 .navigation {
   background-color: #7D1424;
@@ -54,19 +64,32 @@ body {
   justify-content: flex-end;
   height: 100%;
   margin: 0px;
+  padding: 0px;
 }
 
 .nav-item {
-  display: inline-block;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
   padding: 10px 5px;
   background-color: #F24D16;
   border: 0.5px solid #bdc3c7;
+  width: 100%;
+}
+
+.nav-item img {
+  padding-top: 10px;
+    width: 35px;
+    height: 35px;
+
 }
 
 .app-body {
   width: 100%;
   padding: 0px;
   margin: 0px;
+  height: 100vh;
 }
 
 #style-9::-webkit-scrollbar-track
@@ -225,7 +248,6 @@ body {
   border-radius: 2px;
   background-color: white;
   width: 70%;
-  height: 70%;
   margin-left: auto;
   margin-right: auto;
   margin-top: 100px;
@@ -323,23 +345,227 @@ input[type="submit"] {
   flex-direction: column;
 }
 
+/* Profile Page */
+
+.profile-container {
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: white;
+  border-radius: 5px;
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+}
+
+.profile-container h2 {
+  text-align: center;
+  background-color: mediumseagreen;
+  border-radius: 3px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.profile-wrapper {
+
+}
+
+.profile-wrapper ul {
+  list-style: none;
+  padding: 0px;
+}
+
+.profile-wrapper li {
+     border-bottom: 1px solid aliceblue;
+}
+
+.profile-section {
+  margin-left: 50px;
+  padding-top: 6px;
+  border-bottom: 1px solid aliceblue;
+  padding-bottom: 20px;
+}
+
+.profile-section h4 {
+  padding: 0px;
+  margin: 0px;
+}
+
+.profile-section p {
+  padding: 0px;
+  margin: 0px;
+}
+
+.edit-button {
+  border-radius: 10px;
+  padding: 10px 15px;
+}
+
+.flat-button {
+  border-radius: 5px;
+  padding: 5px 10px;
+  color: white;
+  text-align: center;
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
+  background: #d35400;
+  border: 0;
+  border-bottom: 2px solid #c54e00;
+  -webkit-box-shadow: inset 0 -2px #c54e00;
+  box-shadow: inset 0 -2px #c54e00;
+}
+
+.submit-button {
+
+}
+
+
+.edit-section input {
+  margin: 0px;
+  width: 95%;
+  padding: 0px;
+  border-radius: 5px;
+  padding-top: 10px;
+  padding-left: 20px;
+  padding-bottom: 10px;
+  border: 1px solid silver;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.dashboard-container {
+  margin-right: 15px;
+  margin-left: 15px;
+}
+
+.profile-header {
+    text-align: center;
+    text-decoration: underline;
+    padding-top: 10px;
+    margin-top: 0px;
+}
+
+.profile-nav {
+  display: flex;
+  flex-direction: row;
+  list-style: none;
+  width: 100%;
+  margin: 0px;
+  padding: 0px;
+}
+
+.profile-nav li {
+  width: 100%;
+  text-align: center;
+  background-color: white;
+  border: 1px solid black;
+  padding: 10px 15px;
+}
+
+.addbooks-container {
+  border: 1px solid black;
+  margin: 0px;
+  padding: 0px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.addbook-form-container {
+  width: 80%;
+  margin-left: auto;
+  height: 100%;
+  margin-right: auto;
+  margin-left: auto;
+  padding-top: 25px;
+  padding-bottom: 50px;
+}
+
+.addbook-header {
+  position: relative;
+  left: 50px;
+  margin-bottom: 5px;
+}
+
+.addbook-form-container h4 {
+  margin: 0px;
+}
+
+.addbook-form  {
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  margin-right: auto;
+  margin-left: auto;
+  justify-content: center;
+  /* padding-right: 50px; */
+  /* align-items: center; */
+}
+
+.addbook-form  input {
+  width: 100%;
+  margin-top: 10px;
+  margin-bottom: 5px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 10px;
+  padding-left: 30px
+}
+
+
+.addbook-form input:nth-of-type(2n) {
+  margin-bottom: 15px;
+}
+
+
+.addbook-form button {
+  border-radius: 5px;
+  padding: 5px 10px;
+  color: white;
+  text-align: center;
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
+  background: #d35400;
+  border: 0;
+  border-bottom: 2px solid #c54e00;
+  -webkit-box-shadow: inset 0 -2px #c54e00;
+  box-shadow: inset 0 -2px #c54e00;
+}
 
 /*  REACT TRANSITIONS */
 
 .example-enter {
-  opacity: 0.5;
+  opacity: 0;
+  position: relative;
+  top: 50px;
+  transition: top 0.6s ease;
 }
 
 .example-enter.example-enter-active {
+  position: relative;
+  top: 0px;
   opacity: 1;
-  transition: opacity 200ms ease-in;
+  transition: top 0.2s ease, opacity 0.3s ease;
 }
 
 .example-leave {
   opacity: 1;
+  transition: 0.2s ease;
 }
 
 .example-leave.example-leave-active {
-  opacity: 0.5;
-  transition: opacity 500ms ease-in;
+  opacity: 0;
+  transition: opacity 0ms ease-in;
+}
+
+
+@media (max-width: 640px)
+{
+    .book-container {
+      margin-right: 10px;
+    }
+    .book {
+      width: 30%;
+    }
+    .book h5
+    {
+        display: none;
+    }
 }
