--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -413,7 +413,19 @@ input[type="submit"] {
 }
 
 .submit-button {
+  padding: 10px 15px;
+  background-color: #674172;
+  -webkit-box-shadow: 2px 4px 5px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: 2px 4px 5px 0px rgba(0,0,0,0.75);
+  box-shadow: 2px 4px 2px 0px rgba(0,0,0,0.75);
+  color: white;
+  border: none;
+  outline: none;
+}
 
+.submit-button:active {
+  outline: none;
+  border: none;
 }
 
 
@@ -527,6 +539,21 @@ input[type="submit"] {
   border-bottom: 2px solid #c54e00;
   -webkit-box-shadow: inset 0 -2px #c54e00;
   box-shadow: inset 0 -2px #c54e00;
+}
+
+.active-option {
+  background-color: #c0392b !important;
+  color: white;
+  transition: 0.4s;
+}
+
+.initial-loader {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 /*  REACT TRANSITIONS */
